--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'com.github.GrenderG:Toasty:1.5.0'
     implementation 'org.whispersystems:signal-protocol-android:2.8.1'
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
 
 
 
